[gd_scene load_steps=20 format=3 uid="uid://5rkojxeauqd"]

[ext_resource type="PackedScene" uid="uid://bcb1kojey03uv" path="res://scenes/levels/level.tscn" id="1_vlxgu"]
[ext_resource type="Texture2D" uid="uid://doqonigfxshda" path="res://graphics/ground/stones.png" id="2_3cllp"]
[ext_resource type="Script" path="res://scenes/levels/outside.gd" id="2_mqhp2"]
[ext_resource type="PackedScene" uid="uid://carayvfcsl3ey" path="res://scenes/objects/gate.tscn" id="2_p11dy"]
[ext_resource type="Texture2D" uid="uid://cf64sq650och4" path="res://graphics/decals/dirt_patch.png" id="3_bialx"]
[ext_resource type="Texture2D" uid="uid://r4tquvrbv1qe" path="res://graphics/decals/moss/moss_1.png" id="4_vpsir"]
[ext_resource type="Texture2D" uid="uid://bcvtr4i6vvpca" path="res://graphics/decals/moss/moss_3.png" id="5_f0ene"]
[ext_resource type="Texture2D" uid="uid://c36r4vmyrjfqp" path="res://graphics/decals/moss/moss_2.png" id="6_ttwvm"]
[ext_resource type="Texture2D" uid="uid://14asqpw8rdsp" path="res://graphics/decals/moss/moss_5.png" id="7_nkgm6"]
[ext_resource type="Texture2D" uid="uid://cbyn4f1l75d5e" path="res://graphics/tilesets/outside_walls.png" id="8_utgqg"]
[ext_resource type="Texture2D" uid="uid://c4q5l7a8a5lu8" path="res://graphics/tilesets/soil.png" id="9_fin6v"]
[ext_resource type="PackedScene" uid="uid://nfas1b7d3ile" path="res://houses/house.tscn" id="10_xs2ty"]
[ext_resource type="PackedScene" uid="uid://dytoyjcm5endy" path="res://scenes/objects/light_fan_animation.tscn" id="11_a35os"]
[ext_resource type="PackedScene" uid="uid://xmi0lmfp0m4w" path="res://scenes/objects/steam_vent.tscn" id="13_17gjm"]
[ext_resource type="PackedScene" uid="uid://bgyijtgj7xsb2" path="res://scenes/objects/wall_lamp.tscn" id="14_01b3g"]
[ext_resource type="PackedScene" uid="uid://c3aix84rpeho7" path="res://scenes/enemies/scout.tscn" id="16_67rrk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_55w4i"]
resource_name = "walls"
texture = ExtResource("8_utgqg")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, -60, 54.0937, -57.9828, 54.0937, -63.6396, -65.8771, -65.0834, -64.2897, 61.9086, 54.5675, 63.6993, 54.5675, 58.3539, 195, 59)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -60, 195, -56, 195, 58, -195, 59)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -60, -54.0937, -57.9828, -54.0937, -63.6396, 65.8771, -65.0834, 64.2897, 61.9086, -54.5675, 63.6993, -54.5675, 58.3539, -195, 59)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, 195, -57.9828, 54.0937, -63.6396, 54.0937, -65.0834, -65.8771, 61.9086, -64.2897, 63.6993, 54.5675, 58.3539, 54.5675, 59, 195)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, -60, 54.0937, -57.9828, 54.0937, -63.6396, -65.8771, -65.0834, -57.5, 195, 58.5, 195, 60.5, 60, 195, 59)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -60, -54.0937, -57.9828, -54.0937, -63.6396, 65.8771, -65.0834, 57.5, 195, -58.5, 195, -60.5, 60, -195, 59)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, 195, -56, -195, 58, -195, 59, 195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 60, 54.0937, 57.9828, 54.0937, 63.6396, -65.8771, 65.0834, -57.5, -195, 58.5, -195, 60.5, -60, 195, -59)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, 60, -54.0937, 57.9828, -54.0937, 63.6396, 65.8771, 65.0834, 57.5, -195, -58.5, -195, -60.5, -60, -195, -59)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -195, -57.9828, -54.0937, -63.6396, -54.0937, -65.0834, 65.8771, 61.9086, 64.2897, 63.6993, -54.5675, 58.3539, -54.5675, 59, -195)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ojbqu"]
texture = ExtResource("9_fin6v")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_xuos3"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 15
sources/0 = SubResource("TileSetAtlasSource_55w4i")
sources/1 = SubResource("TileSetAtlasSource_ojbqu")

[node name="Outside" instance=ExtResource("1_vlxgu")]
script = ExtResource("2_mqhp2")

[node name="Gate" parent="." index="1" instance=ExtResource("2_p11dy")]
z_index = 1
position = Vector2(496, -752)

[node name="Ground" parent="." index="2"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(397, 470)
texture = ExtResource("2_3cllp")
region_enabled = true
region_rect = Rect2(-10621.7, -4695.26, 16000, 10000)

[node name="Decoration" type="Sprite2D" parent="Ground" index="1"]
modulate = Color(0.913725, 0.85098, 0.643137, 1)
position = Vector2(1723, 958)
texture = ExtResource("3_bialx")

[node name="Moss1" type="Sprite2D" parent="Ground" index="2"]
position = Vector2(-865, 594)
texture = ExtResource("4_vpsir")

[node name="Moss3" type="Sprite2D" parent="Ground" index="3"]
position = Vector2(879, 1242)
texture = ExtResource("5_f0ene")

[node name="Moss2" type="Sprite2D" parent="Ground" index="4"]
position = Vector2(-394, 1350)
texture = ExtResource("6_ttwvm")

[node name="Moss5" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(841, 576)
texture = ExtResource("7_nkgm6")

[node name="TileMap2" type="TileMap" parent="Ground" index="6"]
position = Vector2(-4, 56)
tile_set = SubResource("TileSet_xuos3")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(-4, 65537, 0, -5, 1, 0, 65531, 1, 1, 131067, 1, 2, 196603, 0, 2, 262150, 131072, 2, 196614, 0, 2, 131078, 0, 2, 65542, 0, 2, 6, 0, 2, -65530, 131072, 1, -65531, 0, 0, 65532, 65537, 1, 65533, 65537, 1, -3, 65537, 1, -65539, 65537, 1, -65538, 65537, 1, -2, 65537, 1, 65534, 65537, 1, 65535, 131073, 1, -1, 65537, 1, -65537, 65537, 1, 131071, 131073, 2, 131070, 65537, 2, 131069, 65537, 2, 131068, 65537, 2)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-4, 65536, 0, -5, 65536, 1, 65531, 0, 2, 131067, 0, 2, 196603, 0, 2, 262150, 131072, 2, -65530, 131072, 1, -65531, 0, 0, 196614, 0, 2, 131078, 0, 2, 65542, 0, 2, 6, 0, 2, -65539, 65537, 0, -3, 65537, 1, 65532, 65537, 1, 65533, 65537, 1, 65534, 65537, 1, 65535, 131073, 1, 131071, 131073, 2, 131070, 65537, 2, 131069, 65537, 2, 131068, 65537, 2)

[node name="House" parent="Ground" index="7" instance=ExtResource("10_xs2ty")]
position = Vector2(-1613, 3978)
rotation = -2.75238

[node name="LightFanAnimation" parent="Ground" index="8" instance=ExtResource("11_a35os")]
position = Vector2(-2732, 2040)
autoplay = "default"
frame_progress = 0.347933

[node name="SteamVent" parent="." index="4" instance=ExtResource("13_17gjm")]
position = Vector2(-366, 479)

[node name="WallLamp" parent="." index="5" instance=ExtResource("14_01b3g")]
position = Vector2(-110, 4880)
rotation = 2.79253

[node name="Items" parent="." index="7"]
metadata/_edit_lock_ = true

[node name="Enemies" type="Node2D" parent="." index="9"]

[node name="Scout" parent="Enemies" index="0" instance=ExtResource("16_67rrk")]
position = Vector2(51, 925)

[node name="Lights" parent="." index="10"]
metadata/_edit_lock_ = true

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="body_entered" from="Ground/House" to="." method="_on_house_body_entered"]
[connection signal="body_exited" from="Ground/House" to="." method="_on_house_body_exited"]
